Fixed and updated swagger docs
