# backend/docs/swagger.yaml
@@ -1,23 +1,5 @@
 basePath: /
 definitions:
-  images.Image:
-    properties:
-      created_at:
-        example: "2013-08-20T18:52:09.000Z"
-        type: string
-      id:
-        example: a407dee395ed97ead1e40c7537395d6271c07cc89c317f8eda1c19f6fc783695
-        type: string
-      image_name:
-        example: dockware/dev
-        type: string
-      image_tag:
-        example: 6.6.8.2
-        type: string
-      size:
-        example: 1048576
-        type: integer
-    type: object
   images.ImageDeleteResponse:
     properties:
       message:
@@ -43,27 +25,6 @@ definitions:
         type: string
       status:
         example: success
-        type: string
-    type: object
-  sandbox.SandboxInfo:
-    properties:
-      container_id:
-        type: string
-      container_name:
-        type: string
-      created_at:
-        type: string
-      destroy_at:
-        type: string
-      id:
-        type: string
-      image:
-        type: string
-      state:
-        type: string
-      status:
-        type: string
-      url:
         type: string
     type: object
   sandboxes.SandboxCreateRequest:
@@ -108,10 +69,49 @@ definitions:
         example: success
         type: string
     type: object
+  services.Image:
+    properties:
+      created_at:
+        example: "2013-08-20T18:52:09.000Z"
+        type: string
+      id:
+        example: a407dee395ed97ead1e40c7537395d6271c07cc89c317f8eda1c19f6fc783695
+        type: string
+      image_name:
+        example: dockware/dev
+        type: string
+      image_tag:
+        example: 6.6.8.2
+        type: string
+      size:
+        example: 1048576
+        type: integer
+    type: object
+  services.SandboxInfo:
+    properties:
+      container_id:
+        type: string
+      container_name:
+        type: string
+      created_at:
+        type: string
+      destroy_at:
+        type: string
+      id:
+        type: string
+      image:
+        type: string
+      state:
+        type: string
+      status:
+        type: string
+      url:
+        type: string
+    type: object
 host: localhost:8080
 info:
   contact: {}
-  description: Management API for Docker Sandbox Enviroment
+  description: Management API for Docker Sandbox Environment
   license:
     name: MIT
   title: mpXsandbox API
@@ -145,7 +145,7 @@ paths:
           description: OK
           schema:
             items:
-              $ref: '#/definitions/images.Image'
+              $ref: '#/definitions/services.Image'
             type: array
         "400":
           description: Bad Request
@@ -231,7 +231,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/images.Image'
+            $ref: '#/definitions/services.Image'
         "400":
           description: Bad Request
           schema:
@@ -252,7 +252,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/sandbox.SandboxInfo'
+            $ref: '#/definitions/services.SandboxInfo'
         "400":
           description: Bad Request
           schema:
@@ -286,6 +286,8 @@ paths:
             additionalProperties:
               type: string
             type: object
+      security:
+      - BasicAuth: []
       summary: Create new sandbox
       tags:
       - Sandbox Management
@@ -335,7 +337,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/sandbox.SandboxInfo'
+            $ref: '#/definitions/services.SandboxInfo'
         "400":
           description: Bad Request
           schema:
